import rock salt font and fix tag spacing

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ Author URI: https://connorocampo.dev
 
 /* GLOBAL */
 
+@import url("https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -49,9 +51,8 @@ body {
   /* font-family: "Helvetica Neue", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif; */
-  font-family: Helvetica, system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 h1 {
@@ -166,7 +167,7 @@ nav {
 }
 
 .site-title {
-  color: wheat;
+  color: var(--white);
   font-family: "Rock Salt", Helvetica, system-ui, -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
     "Open Sans", "Helvetica Neue", sans-serif;
@@ -398,7 +399,7 @@ input#s {
   display: inline-block;
   font-size: 16px;
   margin-bottom: 10px;
-  padding: 2px 10px 1px 10px;
+  padding: 1px 10px 2px 10px;
 }
 
 /* ARCHIVE PAGE */
@@ -481,6 +482,11 @@ input#s {
 
 .single h1 {
   margin-top: 15px;
+}
+
+.post-meta {
+  display: inline-block;
+  margin-top: 5px;
 }
 
 .post-credit {
